added more assets and linked bootstrap

--- a/assets/fiveday.html
+++ b/assets/fiveday.html
@@ -12,11 +12,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="fiveday.css" />
     <title>Weather Dashboard</title>
   </head>
   <body>
     
-    <script src="assets/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
