--- a/fiveday.html
+++ b/fiveday.html
@@ -12,9 +12,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/fiveday-style.css" />
     <link rel="stylesheet" href="assets/style.css" />
-    <title>Weather Dashboard</title>
+    <title>The Weather Dashboard</title>
   </head>
   <body>
     <header class="header">
